@@ -1,6 +1,6 @@
-Date: 2025-01-17
+Date: 2025-01-22
 Package: CHNOSZ
-Version: 2.1.0-40
+Version: 2.1.0-41
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
